2009-04-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_support.c:
	(glide_gtk2_engine_hack_menu_shell_setup):
	* engines/hc/src/hc_gtk2_support.c:
	(hc_gtk2_engine_hack_menu_shell_setup_signals):
	* engines/redmond/src/redmond_gtk2_misc.c:
	(redmond_gtk2_engine_hack_menu_shell_setup_signals):
	Remove some usage of deprecated definitions. Bug #572178

2009-04-03  Christian Persch  <chpe@gnome.org>

	* engines/Makefile.am: Also dist the symbols file. Bug ##576787
	follow-up.

2009-04-02  Christian Persch  <chpe@gnome.org>

	* engines/clearlooks/Makefile.am:
	* engines/crux/Makefile.am:
	* engines/engine.symbols:
	* engines/glide/Makefile.am:
	* engines/hc/Makefile.am:
	* engines/industrial/Makefile.am:
	* engines/lua/Makefile.am:
	* engines/mist/Makefile.am:
	* engines/redmond/Makefile.am:
	* engines/support/Makefile.am:
	* engines/thinice/Makefile.am: Only export the necessary symbols. Bug
	#576787.

2009-04-02  Christian Persch  <chpe@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_set_mixed_color):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c: Fix unresolved
	symbol error. Bug #576786.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c (clearlooks_draw_entry):
	* engines/clearlooks/src/clearlooks_draw_gummy.c
	(clearlooks_gummy_draw_entry):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed the focus inner shadow in draw_entry.
	Fixed the focus_color in the gtkrc, needs to be backported in
	gnome-themes.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Post release version bump.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.18.0.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c: